adaptation for mobile devices

--- a/docs/less/blocks/_button.less
+++ b/docs/less/blocks/_button.less
@@ -1,19 +1,18 @@
 .button {
 	display: inline-block;
-	position: absolute;
-	left: 50%;
-	bottom: 0;
-	-webkit-transform: translate(-50%, 40%);
-	   -moz-transform: translate(-50%, 40%);
-	    -ms-transform: translate(-50%, 40%);
-	     -o-transform: translate(-50%, 40%);
-	        transform: translate(-50%, 40%);
+	margin: 0 auto;
+
+	-webkit-transform: translateY(40%);
+	   -moz-transform: translateY(40%);
+	    -ms-transform: translateY(40%);
+	     -o-transform: translateY(40%);
+	        transform: translateY(40%);
 	
 	background-color: #f76f8d;
 	padding: 17px 35px 16px;
 	-webkit-border-radius: 30px;
 	        border-radius: 30px;
-	z-index: 5;
+	// z-index: 5;
 	
 	font-size: 14px;
 	color: #FFF;
