--- a/docs/less/blocks/_container.less
+++ b/docs/less/blocks/_container.less
@@ -1,10 +1,50 @@
 .container {
-	width: 1045px;
+	display: flex;
+	-webkit-flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
 	margin: 0 auto;
 	
-	&--flex-jcsb {
-		display: flex;
-		-webkit-justify-content: space-between;
-		        justify-content: space-between;
+	&--nav {
+		width: 100%;
+
+		@media (min-width: 992px) {
+			-webkit-flex-direction: row;
+			-ms-flex-direction: row;
+			flex-direction: row;
+			-webkit-justify-content: space-between;
+			justify-content: space-between;
+		}
+	}
+
+	&--info {
+		-webkit-align-items: center;
+		align-items: center;
+	    padding-left: 10px;
+	    padding-right: 10px;
+	    
+		@media (min-width: 992px) {
+			-webkit-flex-direction: row;
+			-ms-flex-direction: row;
+			flex-direction: row;
+			-webkit-justify-content: space-between;
+			justify-content: space-between;
+			-webkit-align-items: stretch;
+			align-items: stretch;
+		    padding-left: 0px;
+		    padding-right: 0px;
+		}
+	}
+
+	@media (min-width: 768px) {
+		width: 750px;
+	}
+
+	@media (min-width: 992px) {
+		width: 970px;
+	}
+
+	@media (min-width: 1200px) {
+		width: 1045px;
 	}
 }
