--- a/docs/less/main.less
+++ b/docs/less/main.less
@@ -8,14 +8,14 @@
 // Blocks
 @import "blocks/_container.less";
 @import "blocks/_navigation.less";
+@import "blocks/_navigation-icon.less";
 @import "blocks/_search-bar.less";
 @import "blocks/_form-booking.less";
 @import "blocks/_destination-list.less";
 @import "blocks/_button.less";
 @import "blocks/_filer-block.less";
-@import "blocks/_hotel-item.less";
+@import "blocks/_hotel-list.less";
 @import "blocks/_info-card.less";
-@import "blocks/_footer-nav.less";
 @import "blocks/_copyright.less";
 @import "blocks/_social-icons.less";
 
