--- a/docs/less/sections/_info.less
+++ b/docs/less/sections/_info.less
@@ -1,5 +1,10 @@
 .info {
 	background-color: #FDF8F9;
-	padding-top: 136px;
+	padding-top: 75px;
 	padding-bottom: 75px;
+	
+	@media (min-width: 992px) {
+		padding-top: 136px;
+		padding-bottom: 75px;
+	}
 }
