--- a/docs/less/blocks/_copyright.less
+++ b/docs/less/blocks/_copyright.less
@@ -4,13 +4,22 @@
 	        justify-content: space-between;
     -webkit-align-items: center;
             align-items: center;
-	padding: 23px 0px 20px;
+	padding: 23px 15px 20px;
+	
+	@media (min-width: 768px) {
+		padding-left: 0;
+		padding-right: 0;
+	}
 }
 
 .copyright__text {
 	margin: 0;
 	font-family: 'Proxima Nova Lt';
-	font-size: 14px;
+	font-size: 12px;
 	color: #666;
 	letter-spacing: 0.7px;
+	
+	@media (min-width: 768px) {
+		font-size: 14px;
+	}
 }
