--- a/docs/less/blocks/_destination-list.less
+++ b/docs/less/blocks/_destination-list.less
@@ -1,31 +1,63 @@
 .destination-list {
-	display: flex;
-	-webkit-justify-content: space-between;
-	justify-content: space-between;
-    -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
+	display: grid;
+	grid-template-columns: 300px;
+	grid-template-rows: repeat(7, 300px);
+	-webkit-justify-content: center;
+	justify-content: center;
+	grid-gap: 25px;
+	margin-bottom: 25px;
+
+	@media (min-width: 414px) {
+		grid-template-columns: 330px;
+		grid-template-rows: repeat(7, 330px);
+	}
+
+	@media (min-width: 768px) {
+		grid-template-rows: repeat(4, 330px);
+		grid-template-columns: repeat(2, 330px);
+	}
+
+	@media (min-width: 1200px) {
+		grid-template-rows: repeat(3, 330px);
+		grid-template-columns: repeat(3, 330px);
+	}
 }
 
 .destination-item {
+	background-repeat: no-repeat;
+	background-position: center;
+	-webkit-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 	display: block;
+	width: 100%;
+	height: 100%;
 	position: relative;
-	margin-bottom: 25px;
 	overflow: hidden;
 	box-shadow: 8px 13px 15px rgba(189, 10, 170, 0.15);
+	
 	
 	&:hover .destination-item-hover {
 		display: block;
 		top: 0;
 	}
-}
 
-.destination-item__img {
-	display: block;
-	width: 330px;
-	
-	&--big {
-		width: 687px;
+	@media (min-width: 768px) {
+
+		&--big-end {
+			grid-column-start: span 2;
+		}
+	}
+
+	@media (min-width: 1200px) {
+		
+		&--big-center {
+			grid-column-start: span 2;
+		}
+
+		&--big-end {
+			grid-column-end: span 2;
+		}
 	}
 }
 
@@ -41,10 +73,10 @@
 	color: #FFF;
 	
 	-webkit-transition: top 0.5s ease-out;
-	   -moz-transition: top 0.5s ease-out;
-	    -ms-transition: top 0.5s ease-out;
-	     -o-transition: top 0.5s ease-out;
-	        transition: top 0.5s ease-out;
+	-moz-transition: top 0.5s ease-out;
+	-ms-transition: top 0.5s ease-out;
+	-o-transition: top 0.5s ease-out;
+	transition: top 0.5s ease-out;
 }
 
 .destination-item-hover__icon {
