--- a/docs/less/blocks/_filer-block.less
+++ b/docs/less/blocks/_filer-block.less
@@ -1,20 +1,34 @@
-.filer-block {
-	margin-bottom: 67px;
+.filter-block {
+	display: flex;
+	-webkit-flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	-webkit-align-items: center;
+	align-items: center;
+	margin: 0;
+	margin-bottom: 50px;
+	padding: 0;
+	list-style-type: none;
+	
 	font-family: 'Proxima Nova Lt';
 	font-size: 14px;
 	color: #cccccc;
 	letter-spacing: 1.4px;
 	text-align: center;
-}
-
-.filter-block__list {
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
+	
+	@media (min-width: 768px) {
+		-webkit-flex-direction: row;
+		-ms-flex-direction: row;
+		flex-direction: row;
+		-webkit-justify-content: center;
+		justify-content: center;
+	    margin-bottom: 67px;
+	}
 }
 
 .filter-block__item {
 	margin: 0;
+	margin-bottom: 30px;
 	padding: 8px 50px;
 	display: inline-block;
 	cursor: pointer;
@@ -26,6 +40,10 @@
 	     -o-transition: all 0.3s ease-in;
 	        transition: all 0.3s ease-in;
 	
+	&:last-child {
+		margin-bottom: 0;
+	}
+	
 	&--active {
 		color: #F76F8D;
 		box-shadow: 0px 0px 20px 0px rgba(247, 111, 141, 0.15);
@@ -34,5 +52,13 @@
 	&:hover, &:active, &:focus {
 		color: #F76F8D;
 		box-shadow: 0px 0px 20px 0px rgba(247, 111, 141, 0.15);
+	}
+
+	@media (min-width: 768px) {
+		margin: 0px 10px 0px 0px;
+		
+		&:last-child {
+			margin-right: 0;
+		}
 	}
 }
