--- a/docs/less/blocks/_navigation.less
+++ b/docs/less/blocks/_navigation.less
@@ -1,51 +1,82 @@
 .navigation {
-	display: flex;
-	-webkit-align-items: center;
-	        align-items: center;
-	background-color: rgba(0, 0, 0, .15);
-	height: 70px;
-	margin-bottom: 180px;
-}
-
-.logo {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 9999;
 	display: flex;
 	-webkit-align-items: center;
 	align-items: center;
+	padding-left: 15px;
+	padding-right: 15px;
+	height: 70px;
+	background-color: rgba(0, 0, 0, .15);
+	
+	@media (min-width: 992px) {
+		position: absolute;
+		width: 100%;
+	}
+}
+
+.logo {
+	 
+    @media (min-width: 992px) {
+    	display: flex;
+    	-webkit-align-items: center;
+    	align-items: center;
+    }
 }
 
 .navigation-list {
-}
-
-.navigation-list__block {
+	display: none;
+	position: absolute;
+	top: 70px;
+	left: 0;
+	right: 0;
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
+	// z-index: 9999;
+	
+	@media (min-width: 992px) {
+		display: inline-block;
+		position: static;
+	}
 }
 
 .navigation-list__item {
+	display: block;
 	margin: 0;
 	padding: 0;
-	display: inline-block;
-	margin-right: 12px;
-	
+	border-bottom: 1px solid rgba(255, 255, 255, .9);
 	
 	&:last-child {
-		margin-right: 0;
+		border: none;
+	}
+
+	@media (min-width: 992px) {
+		display: inline-block;
+		border: none;
+		margin-right: 12px;
+		
+		&:last-child {
+			margin-right: 0;
+			border: none;
+		}
 	}
 }
 
 .navigation-list__link {
-	padding-left: 18px;
-	padding-right: 18px;
-	padding-bottom: 8px;
-	border-bottom: 2px solid transparent;
+	display: block;
+	background-color: rgba(247, 111, 141, 0.9);
+	padding: 20px 15px;
 
 	text-decoration: none;
-	font-size: 14px;
+	font-size: 18px;
 	font-weight: bold;
 	color: #FFF;
-	opacity: 0.3;
 	outline: none;
+	
 	-webkit-transition: all 0.3s ease-in;
 	   -moz-transition: all 0.3s ease-in;
 	    -ms-transition: all 0.3s ease-in;
@@ -53,7 +84,22 @@
 	        transition: all 0.3s ease-in;
 	
 	&:hover, &:active, &:focus {
-		opacity: 1;
-		border-bottom: 2px solid #fff;
+		background-color: rgba(234, 59, 98, 0.9);
+	}
+
+	@media (min-width: 992px) {
+		background-color: transparent;
+		padding: 10px 18px 8px;
+		border-bottom: 2px solid transparent;
+		
+		font-size: 14px;
+		opacity: 0.3;
+		outline: none;
+		
+		&:hover, &:active, &:focus {
+			opacity: 1;
+			border-bottom: 2px solid #fff;
+			background-color: transparent;
+		}
 	}
 }
