--- a/docs/less/blocks/_search-bar.less
+++ b/docs/less/blocks/_search-bar.less
@@ -1,13 +1,17 @@
 .search-bar {
 	position: relative;
 	display: inline-block;
-	width: 445px;
+	width: 300px;
+	
+	@media (min-width: 992px) {
+		width: 445px;
+	}
 }
 
 .search-bar__input {
 	display: block;
-	width: 400px;
-	height: 50px;
+	width: 298px;
+	height: 45px;
 	padding-left: 60px;
 	
 	background-color: #FFF;
@@ -34,12 +38,17 @@
 	&:hover, &:active, &:focus {
 		border: 1px solid #f76f8d;
 	}
+
+	@media (min-width: 992px) {
+		width: 400px;
+		height: 50px;
+	}
 }
 
 .search-bar__submit {
 	position: absolute;
 	top: 50%;
-	right: 20px;
+	right: 0px;
 	-webkit-transform: translate(0%, -50%);
 	-moz-transform: translate(0%, -50%);
 	-ms-transform: translate(0%, -50%);
@@ -47,7 +56,7 @@
 	transform: translate(0%, -50%);
 	
 	background-color: #f76f8d;
-	padding: 20px 40px;
+	padding: 15px 30px;
 	border: none;
 	-webkit-border-radius: 30px;
 	border-radius: 30px;
@@ -69,5 +78,10 @@
 	&:hover, &:active, &:focus {
 		background-color: #F73C65;
   		box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.3);
+	}
+
+	@media (min-width: 992px) {
+		right: 20px;
+		padding: 20px 40px;
 	}
 }
