--- a/docs/less/sections/_header.less
+++ b/docs/less/sections/_header.less
@@ -6,10 +6,10 @@
 	-webkit-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-	height: 790px;
+	height: 550px;
 	box-shadow: 8px 13px 15px rgba(189, 10, 170, 0.15);
 	position: relative;
-	z-index: 0;
+	z-index: 1;
 
 	&:after {
 		content: "";
@@ -21,22 +21,58 @@
 		background-color: rgba(240, 74, 111, 0.5);
 		z-index: -1;
 	}
+
+	@media (min-width: 768px) {
+		height: 650px;
+	}
+
+	@media (min-width: 992px) {
+		height: 790px;
+	}
 }
 
-.header-heading {
-	width: 750px;
-	margin: 0 auto;
-	text-align: center;
+.header-content {
+	height: 100%;
+	display: flex;
+	-webkit-flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	-webkit-align-items: center;
+	align-items: center;
+	-webkit-justify-content: center;
+	justify-content: center;
 }
 
-.header-heading__title {
+.header-content__title {
+	max-width: 390px;
 	margin: 0;
 	margin-bottom: 40px;
 	color: #ffffff;
 	text-align: center;
-	font-size: 48px;
+	font-size: 24px;
 	font-weight: bold;
 	text-transform: uppercase;
-	letter-spacing: 3.4px;
+	letter-spacing: 1.4px;
 	text-shadow: 3px 4px 20px rgba(0, 0, 0, 0.3);
+	
+	@media (min-width: 414px) {
+		max-width: 450px;
+		font-size: 30px;
+	}
+
+	@media (min-width: 480px) {
+		max-width: 550px;
+		font-size: 35px;
+	}
+
+	@media (min-width: 768px) {
+		max-width: 625px;
+		font-size: 40px;
+	}
+
+	@media (min-width: 992px) {
+		max-width: 750px;
+		font-size: 48px;
+		letter-spacing: 3.4px;
+	}
 }
